# llama-chat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  event.rs  lib.rs  main.rs  skills.rs  subagent.rs
src/api/: client.rs  mod.rs  stream.rs  types.rs
src/config/: mcp_config.rs  mod.rs  settings.rs  theme.rs
src/mcp/: http.rs  mod.rs  sse.rs  stdio.rs  types.rs
src/memory/: chunk.rs  commands.rs  embed.rs  extract.rs  mod.rs  retrieval.rs  schema.rs  store.rs  types.rs
src/tools/: background.rs  background_subagent.rs  filesystem.rs  mod.rs  permissions.rs  shell.rs
src/ui/: chat.rs  header.rs  input.rs  mod.rs  prompt.rs  sidebar.rs
tests/: memory_integration.rs  memory_property.rs  memory_save.rs
tests/common/: mod.rs
