[package]
name = "llama-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dirs = "6"
glob = "0.3"
anyhow = "1"
async-trait = "0.1"
