[package]
name = "llama-chat"
version = "0.4.0"
edition = "2024"
description = "A Claude Code-like TUI chat client for Ollama and llama.cpp servers"
license = "MIT"
repository = "https://github.com/quinnjr/llama-chat"
keywords = ["tui", "llm", "ollama", "chat", "mcp"]
categories = ["command-line-utilities"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-stream = "0.1"
futures = "0.3"
dirs = "6"
glob = "0.3"
anyhow = "1"
unicode-width = "0.2"
async-trait = "0.1"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vector-rs = { version = "0.2", features = ["library"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
